# bytecode

./: CONTRIBUTING.md  Cargo.toml  README.md
examples/: example1  procedure
src/: assembler.rs  error.rs  lib.rs  opcode.rs  rawbytes.rs  vm.rs
