[package]
name = "bytecode"
version = "0.0.0"
edition = "2021"
authors = ["ky0422 (Kim Jun Young)"]
description = "A bytecode structure, interpreter and optimizer for the Signature programming language"
repository = "https://github.com/siglang/bytecode"
license = "MIT"

[[bin]]
name = "bytecode"
path = "bin/main.rs"

[dependencies]
thiserror = "1.0.37"
clap = { version = "4.1.4", features = ["derive"] }
